--- a/jobHunter/requirements.txt
+++ b/jobHunter/requirements.txt
@@ -1,13 +1,58 @@
+annotated-types==0.7.0
+anyio==4.9.0
+argcomplete==1.10.3
 asgiref==3.8.1
+certifi==2025.4.26
+chardet==3.0.4
+charset-normalizer==3.4.2
+click==8.2.0
+compressed-rtf==1.0.7
+distro==1.9.0
 Django==5.2.1
 djangorestframework==3.16.0
+docx2txt==0.9
 dotenv==0.9.9
-numpy==2.2.5
+ebcdic==1.1.1
+extract-msg==0.28.7
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+IMAPClient==2.1.0
+jiter==0.9.0
+joblib==1.5.0
+lxml==5.4.0
+markdownify==1.1.0
+nltk==3.9.1
+numpy==1.26.3
+olefile==0.47
+openai==1.78.1
 pandas==2.2.3
+pdfminer.six==20191110
+pillow==11.2.1
 psycopg2-binary==2.9.10
+pycountry==24.6.1
+pycryptodome==3.22.0
+pydantic==2.11.4
+pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-pptx==0.6.23
 pytz==2025.2
+regex==2024.11.6
+requests==2.32.3
 six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+SpeechRecognition==3.8.1
 sqlparse==0.5.3
+tls-client==1.0.1
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
 tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+xlrd==1.2.0
+XlsxWriter==3.2.3
