--- a/jobHunter/requirements.txt
+++ b/jobHunter/requirements.txt
@@ -12,7 +12,7 @@ async-lru==2.0.4
 attrs==25.1.0
 babel==2.17.0
 bcrypt==4.3.0
-beautifulsoup4==4.13.4
+beautifulsoup4>=4.8.0,<5.0.0
 bleach==6.2.0
 boto3==1.37.37
 botocore==1.37.37
@@ -184,7 +184,6 @@ sqlparse==0.5.3
 stack-data==0.6.3
 starlette==0.46.1
 terminado==0.18.1
-textract==1.6.3
 tifffile==2025.3.30
 tinycss2==1.4.0
 tk==0.1.0
